[package]
name = "kamu-cli"
version = "0.127.1"
description = "Decentralized data management tool"
authors = ["Sergii Mikhtoniuk <mikhtoniuk@gmail.com>"]
edition.workspace = true
readme = "../README.md"
license-file = "../LICENSE.txt"
publish = false
homepage = "https://github.com/kamu-data/kamu-cli"
repository = "https://github.com/kamu-data/kamu-cli"
keywords = ["cli", "data", "collaboration", "pipeline", "management", "provenance"]
categories = ["command-line-utilities"]


[lib]
doctest = false


[features]
default = []

web-ui = []
ftp = ["kamu/ftp"]

skip_docker_tests = []


[dependencies]
# Kamu
dill = "0.5"
internal-error = { version = "0.127.1", path = "../utils/internal-error" }
opendatafabric = { version = "0.127.1", path = "../opendatafabric" }
kamu = { version = "0.127.1", path = "../kamu-core" }
kamu-adapter-graphql = { version = "0.127.1", path = "../kamu-adapter-graphql" }
kamu-adapter-http = { version = "0.127.1", path = "../kamu-adapter-http" }
container-runtime = { version = "0.127.1", path = "../utils/container-runtime" }

# CLI
chrono-humanize = "0.2"  # Human readable durations
clap = "4"
clap_complete = "4"
console = "0.15"  # Terminal colors
humansize = "2"  # Human readable data sizes
indicatif = "0.17"  # Progress bars and spinners
minus = { version = "5", features = ["static_output", "search"] }
num-format = "0.4"  # Human-readable number formatting
prettytable-rs = "0.10"  # ASCII table formatting
read_input = "0.8"  # Basic user input
webbrowser = "0.8"  # For opening URLs in default system browser

# API / GraphQL
http = "0.2"
hyper = "0.14"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors"] }
axum = { version = "0.6", features = ["ws"] }
axum-extra = { version = "0.7", features = ["async-read-body"] }
async-graphql = { version = "5", features = ["chrono", "url", "apollo_tracing"] }
async-graphql-axum = "5"
serde_json = "1"

# Web UI
rust-embed = { version = "6", features = ["interpolate-folder-path", "compression"] }
mime = "0.3"
mime_guess = "2"

# Config
duration-string = { version = "0.3", features = ["serde"] }
merge = "0.1"
serde = { version = "1", features = ["derive"] }
serde_with = "3"
serde_yaml = "0.9"

# Tracing / logging / telemetry
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.1"
tracing-bunyan-formatter = "0.3"

# Utils
async-trait = "0.1"
chrono = "0.4"
cfg-if = "1"  # Conditional compilation
datafusion = "25"
dirs = "5"
fs_extra = "1.3"
futures = "0.3"
glob = "0.3"  # Used for path completions
indoc = "2"
itertools = "0.10"
libc = "0.2"  # Signal names
regex = "1"
shlex = "1"  # Parsing partial input for custom completions
signal-hook = "0.3"  # Signal handling
tokio = { version = "1", default-features = false, features = ["io-util"] }
tempfile = "3"
thiserror = "1"
url = "2"
urlencoding = "2"


[target.'cfg(unix)'.dependencies]
users = "0.11"  # For getting uid:gid


[dev-dependencies]
env_logger = "0.10"
rand = "0.8"
test-log = { version = "0.2", features = ["trace"] }
