[package]
name = "kamu"
version = "0.119.0"
authors = ["Sergii Mikhtoniuk <mikhtoniuk@gmail.com>"]
edition.workspace = true
license-file = "../LICENSE.txt"
publish = false

[lib]
doctest = false

[features]
skip_docker_tests = []

[dependencies]
dill = { workspace = true }
opendatafabric = { path = "../opendatafabric" }
container-runtime = { path = "../utils/container-runtime" }

# Domain
chrono = { workspace = true, features = ["serde"] }
url = { workspace = true, features = ["serde"] }

# Serialization
hex = "0.4"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde_yaml = { workspace = true }

# Ingest
flate2 = "1"  # GZip decoder
fs_extra = "1.3"  # Copy files with progress, get directory sizes
curl = { version = "0.4", features = ["http2", "protocol-ftp", "static-curl", "static-ssl"] }  # TODO: reconsider static linking
curl-sys = "0.4"
reqwest = { workspace = true, features = ["rustls-tls", "gzip", "deflate", "stream"] }
ringbuf = "0.3"
tar = "0.4"  # Checkpoint archival
zip = "0.6"

# Data
arrow = { workspace = true, features = ["chrono-tz"] }
arrow-digest = { workspace = true }
datafusion = { workspace = true }
object_store = { workspace = true }
digest = { workspace = true }
sha3 = { workspace = true }

# Repositories
async-stream = { workspace = true }
aws-config = { version = "0.55.0" }
aws-sdk-s3 = { version = "0.25" }
aws-smithy-http = { version = "0.55.0", features = ["rt-tokio"] }
bytes = { workspace = true }
futures = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true, features=["fs", "process"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features=["codec", "compat", "io"] }
trust-dns-resolver = "0.22"  # TODO: Needed for DNSLink resolution with IPFS

# Utils
async-trait = { workspace = true }
async-recursion = { workspace = true }
cfg-if = "1"  # Conditional compilation
glob = "0.3"  # Used for glob fetch
rand = "0.8"
regex = { workspace = true }
indoc = { workspace = true }
itertools = { workspace = true }
libc = "0.2"  # Signal names
pathdiff = "0.2"  # Relative paths
pin-project = { workspace = true }
strum = "0.24"  # Enum from string
strum_macros = "0.24"
thiserror = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
walkdir = "2"

[target.'cfg(unix)'.dependencies]
users = "0.11"  # For getting uid:gid

[dev-dependencies]
filetime = "0.2"
env_logger = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Http file server
http = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["fs", "trace"] }
axum = { workspace = true }
