[package]
name = "kamu"
version = "0.121.0"
authors = ["Sergii Mikhtoniuk <mikhtoniuk@gmail.com>"]
edition.workspace = true
license-file = "../LICENSE.txt"
publish = false


[lib]
doctest = false


[features]
skip_docker_tests = []
# FTP protocol relies on fixed range of ports that might conflict
# with other applications, thus we only enable FTP tests conditionally in CI
test_ftp = []

[dependencies]
# Kamu
dill = "0.5"
opendatafabric = { version = "0.121.0", path = "../opendatafabric" }
container-runtime = { version = "0.121.0", path = "../utils/container-runtime" }

# Serialization
flatbuffers = "23"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
serde_yaml = "0.9"

# Ingest
curl = { version = "0.4", features = ["http2", "protocol-ftp", "static-curl", "static-ssl"] }  # TODO: reconsider static linking
curl-sys = "0.4"
flate2 = "1"  # GZip decoder
fs_extra = "1.3"  # Copy files with progress, get directory sizes
reqwest = { version = "0.11", features = ["rustls-tls", "gzip", "deflate", "stream"] }
ringbuf = "0.3"
tar = "0.4"  # Checkpoint archival
zip = "0.6"

# Data
arrow = { version = "37", features = ["chrono-tz"] }
arrow-digest = "37"
datafusion = "23"
object_store = "0.5"
digest = "0.10"
sha3 = "0.10"

# Repositories
aws-config = { version = "0.55" }
aws-sdk-s3 = { version = "0.27" }
aws-smithy-http = { version = "0.55", features = ["rt-tokio"] }
trust-dns-resolver = "0.22"  # TODO: Needed for DNSLink resolution with IPFS

# Utils
async-recursion = "1"
async-stream = "0.3"
async-trait = "0.1"
bytes = "1"
cfg-if = "1"  # Conditional compilation
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
glob = "0.3"  # Used for glob fetch
hyper = "0.14"
indoc = "2"
itertools = "0.10"
libc = "0.2"  # Signal names
pathdiff = "0.2"  # Relative paths
pin-project = "1"
rand = "0.8"
regex = "1"
strum = "0.24"  # Enum from string
strum_macros = "0.24"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", default-features = false, features=["fs", "process"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features=["codec", "compat", "io"] }
tracing = "0.1"
url = { version = "2", features = ["serde"] }
walkdir = "2"


[target.'cfg(unix)'.dependencies]
users = "0.11"  # For getting uid:gid


[dev-dependencies]
env_logger = "0.10"
filetime = "0.2"
test-log = { version = "0.2", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Http file server
http = "0.2"
hyper = "0.14"
tower = "0.4"
tower-http = { version = "0.4", features = ["fs", "trace"] }
axum = "0.6"
