[package]
name = "kamu"
description = "Kamu's core domain model interfaces and common implementations"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lib]
doctest = false


[features]
default = []

ftp = ["dep:curl", "dep:curl-sys"]

skip_docker_tests = []


[dependencies]
# Kamu
dill = "0.5"
internal-error = { version = "0.128.0", path = "../utils/internal-error" }
container-runtime = { version = "0.128.0", path = "../utils/container-runtime" }
opendatafabric = { version = "0.128.0", path = "../opendatafabric", default-features = false }

# Serialization
flatbuffers = "23"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
serde_yaml = "0.9"

# Ingest
# TODO: Using curl brings a lot of overhead including compiling and linking openssl
# We should replace it with reqwest + a separate FTP client or drop FTP support in favor of container-based ingest.
curl = { optional = true, version = "0.4", features = ["protocol-ftp", "static-curl", "static-ssl"] }
curl-sys = { optional = true, version = "0.4" }
flate2 = "1"  # GZip decoder
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream", "gzip", "brotli", "deflate"] }
ringbuf = "0.3"
tar = "0.4"  # Checkpoint archival
zip = "0.6"

# Data
arrow-digest = "39"  # Note: Keep in sync with version of arrow used by datafusion
datafusion = "25"
object_store = { version = "0.5", features = ["aws"] }
digest = "0.10"
sha3 = "0.10"

# Repositories
aws-config = { version = "0.55" }
aws-sdk-s3 = { version = "0.28" }
aws-smithy-http = { version = "0.55", features = ["rt-tokio"] }
aws-credential-types = { version = "0.55" }
trust-dns-resolver = "0.22"  # TODO: Needed for DNSLink resolution with IPFS

# Utils
async-recursion = "1"
async-stream = "0.3"
async-trait = "0.1"
bytes = "1"
cfg-if = "1"  # Conditional compilation
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5"
futures = "0.3"
glob = "0.3"  # Used for glob fetch
hyper = "0.14"
indoc = "2"
itertools = "0.10"
libc = "0.2"  # Signal names
pathdiff = "0.2"  # Relative paths
pin-project = "1"
rand = "0.8"
regex = "1"
strum = "0.24"  # Enum from string
strum_macros = "0.24"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", default-features = false, features=["fs", "process"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", default-features = false, features=["codec", "compat", "io"] }
tracing = "0.1"
url = { version = "2", features = ["serde"] }
walkdir = "2"


[target.'cfg(unix)'.dependencies]
users = "0.11"  # For getting uid:gid


[dev-dependencies]
env_logger = "0.10"
filetime = "0.2"
test-log = { version = "0.2", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Http file server
http = "0.2"
hyper = "0.14"
tower = "0.4"
tower-http = { version = "0.4", features = ["fs", "trace"] }
axum = "0.6"
