[package]
name = "opendatafabric"
version = "0.110.1"
authors = ["Sergii Mikhtoniuk <mikhtoniuk@gmail.com>"]
edition = "2021"
license-file = "../LICENSE.txt"

[lib]
doctest = false

[dependencies]
# Domain
chrono = { version = "*", features = ["serde"] }
rust-crypto = "*"  # Data and metadata hashing

# Multiformats
bs58 = "*"  # base58 codec
digest = "*"
sha3 = "*"
unsigned-varint = "*"
url = "*"

# Crypto
rand = "0.7"  # TODO: Pinned for ed25519-dalek compatibility
ed25519-dalek = "*"

# Serialization
byteorder = "*"
flatbuffers = "*"
hex = "*"
serde = { version = "*", features = ["derive"] }
serde_with = "*"
serde_yaml = "*"

# gRPC
tonic = "*"
prost = "*"

# Utils
indoc = "*"  # Compile-time unindent
thiserror = "*"  # Structured error derivations
