[package]
name = "opendatafabric"
version = "0.116.0"
authors = ["Sergii Mikhtoniuk <mikhtoniuk@gmail.com>"]
edition.workspace = true
license = "Apache-2.0"

[lib]
doctest = false

[dependencies]
# Domain
chrono = { workspace = true, features = ["serde"] }

# Multiformats
bs58 = "0.4"  # base58 codec
digest = { workspace = true }
sha3 = { workspace = true }
unsigned-varint = "0.7"
url = { workspace = true }

# Crypto
rand = "0.7"  # TODO: Pinned for ed25519-dalek compatibility
ed25519-dalek = "1"

# Serialization
byteorder = "1"
flatbuffers = { workspace = true }
hex = "0.4"
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true }
serde_yaml = { workspace = true }

# gRPC
tonic = "0.9"
prost = "0.11"

# Utils
indoc = { workspace = true }
thiserror = { workspace = true }
