[package]
name = "opendatafabric"
version = "0.123.1"
authors = ["Sergii Mikhtoniuk <mikhtoniuk@gmail.com>"]
edition.workspace = true
license = "Apache-2.0"


[lib]
doctest = false


[dependencies]
chrono = { version = "0.4", features = ["serde"] }
indoc = "2"
thiserror = "1"

# Multiformats
bs58 = "0.4"  # base58 codec
digest = "0.10"
sha3 = "0.10"
unsigned-varint = "0.7"
url = "2"

# Crypto
ed25519-dalek = "1"
rand = "0.7"  # TODO: Pinned for ed25519-dalek compatibility

# Serialization
byteorder = "1"
flatbuffers = "23"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_with = "3"
serde_yaml = "0.9"

# gRPC
prost = "0.11"
tonic = "0.9"
