[package]
name = "kamu-tools"
version = "0.119.0"
description = "Tools for managing this repo"
edition.workspace = true
publish = false

[[bin]]
name = "release"
path = "src/release.rs"

[[bin]]
name = "create-test-workspace"
path = "src/create_test_workspace.rs"

[dependencies]
clap = { workspace = true }
chrono = { workspace = true }
glob = "0.3"
regex = { workspace = true }
semver = "1"
toml = "0.7"
toml_edit = "0.19"
url = { workspace = true }
yaml-rust = "0.4"

[dev-dependencies]
indoc = { workspace = true }
