[package]
name = "kamu-tools"
description = "Tools for managing this repo"
version = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[[bin]]
name = "release"
path = "src/release.rs"

[[bin]]
name = "create-test-workspace"
path = "src/create_test_workspace.rs"

[dependencies]
clap = "4"
chrono = "0.4"
glob = "0.3"
regex = "1"
semver = "1"
toml = "0.7"
toml_edit = "0.19"
url = "2"
yaml-rust = "0.4"

[dev-dependencies]
indoc = "2"
