[package]
name = "container-runtime"
version = "0.124.1"
authors = ["Sergii Mikhtoniuk <mikhtoniuk@gmail.com>"]
edition.workspace = true
license = "Apache-2.0"

[lib]
doctest = false

[features]
skip_docker_tests = []

[dependencies]
dill = "0.5"
regex = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", default-features = false, features=["process", "sync", "parking_lot"] }
tracing = "0.1"
url = "2"