[package]
name = "kamu-adapter-auth-oso-rebac"
description = "Authorization adapter for Kamu domain based on OSO library & ReBAC properties"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false

[dependencies]
database-common = { workspace = true }
init-on-startup = { workspace = true }
internal-error = { workspace = true }
kamu-accounts = { workspace = true }
kamu-auth-rebac = { workspace = true }
kamu-auth-rebac-services = { workspace = true }
kamu-core = { workspace = true, default-features = false, features = ["oso"] }
kamu-datasets = { workspace = true }
messaging-outbox = { workspace = true }
odf = { workspace = true, default-features = false, features = ["arrow"] }

async-trait = "0.1"
dill = "0.11"
futures = { version = "0.3", default-features = false }
oso = { version = "0.27", default-features = false, features = ["derive"] }
thiserror = { version = "2", default-features = false }
tokio = { version = "1", default-features = false, features = ["macros"] }
tracing = { version = "0.1", default-features = false }

[dev-dependencies]
kamu-accounts-inmem = { workspace = true }
kamu-accounts-services = { workspace = true }
kamu-auth-rebac-inmem = { workspace = true }
kamu-core = { workspace = true, default-features = false, features = ["oso", "testing"] }
kamu-datasets-inmem = { workspace = true }
kamu-datasets-services = { workspace = true }
odf = { workspace = true, default-features = false, features = ["testing"] }
time-source = { workspace = true }

test-log = { version = "0.2", features = ["trace"] }
