[package]
name = "kamu-adapter-auth-oso-rebac"
description = "Authorization adapter for Kamu domain based on OSO library & ReBAC properties"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false

[dependencies]
database-common = { workspace = true, default-features = false }
init-on-startup = { workspace = true }
internal-error = { workspace = true }
kamu-accounts = { workspace = true, default-features = false, features = ["testing"] }
kamu-auth-rebac = { workspace = true, default-features = false }
kamu-auth-rebac-services = { workspace = true, default-features = false }
kamu-core = { workspace = true, default-features = false, features = ["oso"] }
kamu-datasets = { workspace = true, default-features = false }
messaging-outbox = { workspace = true, default-features = false }
odf = { workspace = true, default-features = false, features = ["arrow"] }

async-trait = "0.1"
dill = { version = "0.14", default-features = false }
futures = { version = "0.3", default-features = false }
oso = { version = "0.27", default-features = false, features = ["derive"] }
rayon = { version = "1", default-features = false }
thiserror = { version = "2", default-features = false }
tokio = { version = "1", default-features = false, features = ["macros"] }
tracing = { version = "0.1", default-features = false }

[dev-dependencies]
kamu-accounts-inmem = { workspace = true }
kamu-accounts-services = { workspace = true }
kamu-auth-rebac-inmem = { workspace = true }
kamu-core = { workspace = true, default-features = false, features = ["oso", "testing"] }
kamu-datasets-inmem = { workspace = true }
kamu-datasets-services = { workspace = true }
odf = { workspace = true, default-features = false, features = ["testing"] }
time-source = { workspace = true }

chrono = "0.4"
indoc = { version = "2" }
pretty_assertions = { version = "1" }
test-log = { version = "0.2", features = ["trace"] }
