[package]
name = "kamu-adapter-auth-oso"
description = "Authorization adapter for Kamu domain based on OSO library"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false

[dependencies]
opendatafabric = { workspace = true }
kamu-core = { workspace = true }

async-trait = "0.1"
dill = "0.8"

# Authorization
oso = "0.27"
oso-derive = "0.27"

[dev-dependencies]
kamu = { workspace = true }
event-bus = { workspace = true }

tempfile = "3"
test-log = { version = "0.2", features = ["trace"] }
tokio = { version = "1", default-features = false, features = [] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
