[package]
name = "kamu-adapter-auth-oso"
description = "Authorization adapter for Kamu domain based on OSO library"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false

[dependencies]
internal-error = { workspace = true }
messaging-outbox = { workspace = true }
opendatafabric = { workspace = true }
kamu-accounts = { workspace = true }
kamu-core = { workspace = true }

async-trait = "0.1"
dill = "0.11"
oso = "0.27"
oso-derive = "0.27"
tracing = { version = "0.1", default-features = false }

[dev-dependencies]
kamu = { workspace = true, features = ["testing"] }
time-source = { workspace = true }

tempfile = "3"
test-log = { version = "0.2", features = ["trace"] }
tokio = { version = "1", default-features = false, features = [] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
