[package]
name = "kamu-adapter-auth-web3"
description = "Authorization adapter for Web3 wallets"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false


[dependencies]
email-utils = { workspace = true, default-features = false }
internal-error = { workspace = true, default-features = false }
kamu-accounts = { workspace = true, default-features = false }
kamu-auth-web3 = { workspace = true, default-features = false }
kamu-core = { workspace = true, default-features = false }
odf = { workspace = true, default-features = false }

async-trait = { version = "0.1", default-features = false }
dill = { version = "0.14", default-features = false }
hex = { version = "0.4", default-features = false }
nutype = { version = "0.6", default-features = false }
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false }
siwe = { version = "0.6", default-features = false }
thiserror = { version = "2", default-features = false }


[dev-dependencies]
