[package]
name = "kamu-adapter-flight-sql"
description = "Apache Arrow FlightSQL server"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false


[dependencies]
kamu-accounts = { workspace = true }
kamu-core = { workspace = true }
database-common = { workspace = true }
internal-error = { workspace = true }
time-source = { workspace = true }

arrow-flight = { version = "53", features = ["flight-sql-experimental"] }
async-trait = { version = "0.1", default-features = false }
base32 = { version = "0.5", default-features = false }
base64 = { version = "0.22", default-features = false }
bytes = { version = "1", default-features = false }
chrono = { version = "0.4", default-features = false }
datafusion = { version = "43", default-features = false }
dill = { version = "0.10", default-features = false }
futures = "0.3"
http = { version = "1", default-features = false }
http-body = { version = "1", default-features = false }
like = { version = "0.3", default-features = false }
prost = { version = "0.13", default-features = false }
rand = { version = "0.8", default-features = false }
tokio = { version = "1", default-features = false, features = [] }
tonic = { version = "0.12", default-features = false }
tower = { version = "0.5", default-features = false }
tracing = { version = "0.1", default-features = false }
uuid = { version = "1", default-features = false }


[dev-dependencies]
kamu-accounts = { workspace = true, features = ["testing"] }
kamu-core = { workspace = true, features = ["testing"] }
kamu-data-utils = { workspace = true, features = ["testing"] }

indoc = "2"
mockall = { version = "0.13", default-features = false }
test-log = { version = "0.2", features = ["trace"] }
tokio = { version = "1", default-features = false, features = [] }
tokio-stream = { version = "0.1", default-features = false, features = ["net"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
