[package]
name = "kamu-adapter-graphql"
description = "GraphQL adapter for Kamu's domain model"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false


[dependencies]
database-common = { workspace = true }
internal-error = { workspace = true }
opendatafabric = { workspace = true, features = ["arrow"] }

kamu = { workspace = true }
kamu-accounts = { workspace = true }
kamu-data-utils = { workspace = true }
kamu-core = { workspace = true }
kamu-datasets = { workspace = true }
kamu-task-system = { workspace = true }
kamu-flow-system = { workspace = true }
kamu-flow-system-services = { workspace = true }
event-sourcing = { workspace = true }

async-graphql = { version = "7", features = [
    "chrono",
    "url",
    "apollo_tracing",
] }
async-trait = { version = "0.1", default-features = false }
chrono = "0.4"
datafusion = { version = "44", default-features = false, features = [
    "serde",
] } # TODO: Currently needed for type conversions but ideally should be encapsulated by kamu-core
dill = "0.11"
futures = "0.3"
secrecy = "0.10"
serde = { version = "1", default-features = false }
serde_json = "1"
tokio = { version = "1", default-features = false, features = [] }
tokio-stream = { version = "0.1", default-features = false }
tracing = "0.1"
url = { version = "2", default-features = false }
uuid = { version = "1", default-features = false }


[dev-dependencies]
# TODO: Limit to mock or in-memory implementations only
container-runtime = { workspace = true }
init-on-startup = { workspace = true }
kamu = { workspace = true, features = ["testing"] }
kamu-accounts = { workspace = true, features = ["testing"] }
kamu-accounts-inmem = { workspace = true }
kamu-accounts-services = { workspace = true }
kamu-datasets-inmem = { workspace = true }
kamu-datasets-services = { workspace = true }
kamu-flow-system-inmem = { workspace = true }
kamu-task-system-inmem = { workspace = true }
kamu-task-system-services = { workspace = true }
messaging-outbox = { workspace = true }
time-source = { workspace = true }

indoc = "2"
mockall = "0.13"
pretty_assertions = { version = "1" }
tempfile = "3"
test-group = { version = "1" }
test-log = { version = "0.2", features = ["trace"] }
tokio = { version = "1", default-features = false, features = [] }
