[package]
name = "kamu-adapter-graphql"
description = "GraphQL adapter for Kamu's domain model"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false


[dependencies]
common-macros = { workspace = true }
database-common = { workspace = true }
email-utils = { workspace = true }
internal-error = { workspace = true }
observability = { workspace = true }
odf = { workspace = true, default-features = false, features = [
    "arrow",
    "http",
    "lfs",
    "s3",
] }

event-sourcing = { workspace = true }
kamu = { workspace = true }
kamu-accounts = { workspace = true }
kamu-auth-rebac = { workspace = true }
kamu-core = { workspace = true }
kamu-datasets = { workspace = true }
kamu-flow-system = { workspace = true }
kamu-flow-system-services = { workspace = true }
kamu-task-system = { workspace = true }
kamu-search = { workspace = true }

async-graphql = { version = "7", default-features = false, features = [
    "chrono",
    "url",
    "apollo_tracing",
] }
async-trait = { version = "0.1", default-features = false }
chrono = "0.4"
# TODO: Currently needed for type conversions but ideally should be encapsulated by kamu-core
datafusion = { version = "47", default-features = false, features = ["serde"] }
dill = { version = "0.13", default-features = false }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
secrecy = "0.10"
serde = { version = "1", default-features = false }
serde_json = "1"
tokio = { version = "1", default-features = false, features = [] }
tracing = "0.1"
url = { version = "2", default-features = false }
uuid = { version = "1", default-features = false }


[dev-dependencies]
file-utils = { workspace = true }
init-on-startup = { workspace = true }
kamu = { workspace = true, features = ["testing"] }
kamu-accounts = { workspace = true, features = ["testing"] }
kamu-accounts-inmem = { workspace = true }
kamu-accounts-services = { workspace = true }
kamu-auth-rebac-inmem = { workspace = true }
kamu-auth-rebac-services = { workspace = true }
kamu-datasets-inmem = { workspace = true }
kamu-datasets-services = { workspace = true }
kamu-flow-system-inmem = { workspace = true }
kamu-flow-system-services = { workspace = true }
kamu-task-system-inmem = { workspace = true }
kamu-task-system-services = { workspace = true }
messaging-outbox = { workspace = true }
odf = { workspace = true, default-features = false, features = ["testing"] }
time-source = { workspace = true }

bon = { version = "3", default-features = false }
indoc = "2"
oop = "0.0.2"
pretty_assertions = { version = "1" }
tempfile = "3"
test-group = { version = "1" }
test-log = { version = "0.2", features = ["trace"] }
thiserror = "2"
tokio = { version = "1", default-features = false, features = [] }
